@startuml
left to right direction

' Entités principales
class User {
  + id: int
  + username: string
  + password: string
  + role: string
  + created_at: datetime
}

class Property {
  + id: int
  + title: string
  + description: text
  + price: decimal
  + city: string
  + image_path: string
  + created_at: datetime
  + updated_at: datetime
}

class Category {
  + id: int
  + name: string
  + slug: string
  + description: text
}


' Relations
User "1" -- "*" Property : poste 
Property "*" -- "*" Category : belongsTo 

@enduml